# mineracao-dados-massivos

./: .gitignore  Dockerfile  Dockerfile copy  README.md  docker-compose.yml  install-python3.sh
apps/: README.md  pyproject.toml  requirements.txt
apps/conf/: hudi-defaults.conf
apps/spark_apps/data_transformations/citibike/: distance_transformer.py
apps/spark_apps/data_transformations/embedding_model/: sentence_embedding_bert_model.py  sentence_embedding_model.py
apps/spark_apps/data_transformations/med_qa/question_answering/: question_answering_evaluation.py  question_answering_transformer.py
apps/spark_apps/data_transformations/med_qa/textbook/: textbook_transformer.py
apps/spark_apps/data_transformations/similarity_search/: similarity_search.py
apps/spark_apps/jobs/: citibike_distance_calculation.py  medqa_question_answering_embedding copy.py  medqa_question_answering_embedding.py  medqa_textbook_embedding.py
apps/tests/: __init__.py
apps/tests/citibike/: test_distance_transformer.py
apps/tests/embedding_model/: test_sentence_embedding_bert_model.py
apps/tests/hudi/: __init__.py
apps/tests/hudi/question_answering/: test_question_answering_transformer.py
apps/tests/med_qa/question_answering/: data_test_contract.json  test_question_answering_transformer.py
apps/tests/med_qa/textbook/: test_textbook_transformer.py
evaluation/: README.md  pyproject.toml
evaluation/evaluation/: evaluation-metrics.ipynb  generate-test-data.ipynb  teste.csv
evaluation/evaluation/embedding_model/: sentence_embedding_bert_model.py
