[tool.poetry]
name = "spark-apps"
version = "0.1.0"
description = "Open source project with spark 3.4 and python 3.10 for UnB Master"
authors = ["baptvit <jvrbaptista@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipython = "^8.25.0"
pandas = "^2.2.2"
pyarrow = "^16.1.0"
numpy = "^1.26.4"
pyspark = "^3.5.1"
huggingface = "^0.0.1"
transformers = "^4.41.2"
torch = "^2.3.0"
ipdb = "^0.13.13"
delta = "^0.4.2"
delta-spark = "^3.2.0"


[tool.poetry.group.test.dependencies]
black = "^24.4.2"
ruff = "^0.4.7"
mypy = "^1.10.0"
pytest = "^8.2.1"
coverage = "^7.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true