[tool.poetry]
name = "evaluation"
version = "0.1.0"
description = ""
authors = ["baptvit <jvrbaptista@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyarrow = "^16.1.0"
polars = "^0.20.31"
polars-lts-cpu = "^0.20.31"
jupyterlab = "^4.2.2"
google-cloud-aiplatform = "^1.56.0"
google-generativeai = "^0.7.0"
generativeai = "^0.0.1"
transformers = "^4.41.2"
torch = "^2.3.1"
ipywidgets = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
